feat: Implement client-side routing with React Router
Replaces the static page structure with dynamic routing using `react-router-dom`. This change introduces a navigation system for different sections of the website like Home, Services, Team, and Contact.

The `App.tsx` component is refactored to utilize `Router`, `Routes`, and `Route` for defining navigation paths. Correspondingly, `Navbar.tsx` and `Footer.tsx` are updated to include `Link` and `NavLink` components for proper navigation and active state management.

Dependencies `react-router` and `react-router-dom` have been added to `package.json` and `package-lock.json`.

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^19.0.0",
     "react-i18next": "^16.5.4",
     "react-phone-input-2": "^2.15.1",
+    "react-router-dom": "^7.13.0",
     "vite": "^6.2.0"
   },
   "devDependencies": {
